[package]
name = "cargo-feature-set"
version = "0.2.0"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"
tabwriter = "1.1.0"
cargo_metadata = "0.9.1"
