[package]
name = "cargo-feature-set"
version = "0.3.1"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]
edition = "2018"
description = "Extract the features for every compiled crate from `cargo metadata`."
license = "MIT"
repository = "https://github.com/badboy/cargo-feature-set"

[dependencies]
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"
tabwriter = "1.1.0"
cargo_metadata = "0.9.1"
